# Amiga-Boing-Ball-Screensaver

./: .gitignore  CMakeLists.txt  README.md  kill-screensaver-cache.sh
.github/workflows/: build-all.yml  build-macos.yml  release.yml
resources/: thumbnail.tiff
src/: BoingBallSaver.rc  Info.plist  MacBoingBallView.h  MacBoingBallView.mm  MacPlatform.h  MacPlatform.mm
src/TestApp/: Info.plist  main.mm
src/core/: BoingConfig.h  BoingPhysics.cpp  BoingPhysics.h  BoingRenderer.cpp  BoingRenderer.h  Platform.h
src/platform/macos/: Info.plist  MacBoingBallView.h  MacBoingBallView.mm  MacPlatform.h  MacPlatform.mm
src/platform/windows/: WindowsPlatform.cpp  WindowsPlatform.h
